# now-find-agent

./: .gitignore  CLAUDE.md  Makefile  README.md  README_CRUD_API.md  README_DATABASE_INIT.md  main.py  pyproject.toml  python_nacos_config.py  requirements.txt  setup.sh  switch-env.sh  test.json  test_llm.py  test_run_agent.py
app/: dependencies.py
app/api/: __init__.py  agents.py  example.py  health.py  llms.py  tools.py
app/constants/: __init__.py  common.py
app/exceptions/: exception.py
app/http/middleware/: __init__.py  request_logger.py
app/models/: Agent.py  BaseModels.py  LLM.py  Tool.py
app/orm/: __init__.py
app/orm/dao/: AgentDao.py  BaseDao.py  LLMDao.py  ToolDao.py  __init__.py
app/orm/entity/: BaseEntity.py  BaseTenantEntity.py
app/orm/service/: AgentService.py  BaseServiceImpl.py  LLMService.py  ToolService.py  __init__.py
app/orm/tools/: DB.py  SQLAlchemyInterceptor.py
app/pages/: Order.py  PageHelper.py  Pager.py  Paginate.py  Sorter.py  __init__.py
app/providers/: app_provider.py  exception_provider.py  logging_provider.py
app/providers/database/: __init__.py
app/schemas/: __init__.py  agent.py  base.py  llm.py  tool.py
app/services/: crypto.py  redis.py
app/services/now_find_agents/: graph_builder.py
app/services/now_find_agents/graph_nodes/: supervisor_node.py
app/services/workflow/: base.py  start_workflow.py  state_types.py  workflow_builder.py
app/support/: asyncio.py
app/utils/: __init__.py  object_dict.py  update_imports.py
app/utils/common/: __init__.py  date_util.py  decorators.py  function_analyzer.py  id_util.py  md5_util.py  number_util.py  path_util.py  router_utils.py  session_util.py  str_util.py  validate_util.py
app/utils/core/: __init__.py  json_util.py  object_util.py  reflect_util.py  serialization_utils.py
app/utils/data/: __init__.py  database_utils.py  redis_util.py
app/utils/io/: __init__.py  file_util.py
app/utils/web/: __init__.py  request_util.py  resp_utils.py
bootstrap/: application.py
config/: config.py  secure_config.py
config/nacos/: __init__.py  config_manager.py  config_mapper.py  settings.py
config/settings/: dir.py  email.py  logging.py  redis.py
docs/: NACOS_CONFIG_GUIDE.md  NACOS_SETUP_GUIDE.md
static/docs/: PROJECT_STRUCTURE.md  QUICK_START.md  README_SCAFFOLD.md  SIMPLE_START.md  database-examples.md  multi-environment-guide.md
static/fastapi/swagger-ui@5.17.14/: swagger-ui-bundle.js
tests/: check_tables.sh  test_database_tables.py
