[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "config", "bootstrap"]

[project]
name = "now-find-agent"
version = "1.0.0"
description = "NOW Find Agent - 智能信息发现与分析平台，基于 FastAPI 的现代化代理系统"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "NOW Find Agent Team", email = "team@nowfindagent.com" }
]
keywords = [
    "fastapi",
    "agent",
    "ai",
    "information-discovery",
    "llm",
    "async",
    "multi-database",
    "multi-environment"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

# 核心依赖 - 稳定版本
dependencies = [
    # Web框架
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "starlette>=0.27.0",
    # 数据验证和配置
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    # 数据库核心
    "sqlalchemy[asyncio]>=2.0.0",
    "greenlet>=2.0.0",
    # HTTP客户端
    "httpx[socks]>=0.24.0",
    "requests>=2.28.0",
    # 缓存
    "redis>=4.5.0",
    # 日志
    "loguru>=0.7.0",
    # 工具
    "tenacity>=8.0.0",
    "colorama>=0.4.6",
    # 配置中心
    "nacos-sdk-python<=2.0.9",
]

# 可选依赖组
[project.optional-dependencies]

# 数据库驱动
database = [
    "aiomysql>=0.1.1",      # MySQL 异步驱动
    "aiosqlite>=0.19.0",    # SQLite 异步驱动  
    "asyncpg>=0.28.0",      # PostgreSQL 异步驱动
    "psycopg2-binary>=2.9.0", # PostgreSQL 同步驱动
    "pymysql>=1.0.0",       # MySQL 同步驱动
]

# AI/LLM 功能 - 稳定版本
ai = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0", 
    "langchain-openai>=0.1.0",
    "langchain-text-splitters>=0.0.1",
    "langgraph>=0.0.1",
    "langgraph-checkpoint>=0.0.1",
    "langgraph-prebuilt>=0.0.1",
    "langgraph-sdk>=0.0.1",
    "langsmith>=0.1.0",
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
    "langgraph-cli[inmem]"
]   

# 开发工具 - 稳定版本
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0", 
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

# 生产部署
production = [
    "gunicorn>=20.0.0",
]

# 完整安装（包含所有功能）
all = [
    "now-find-agent[database,ai,dev,production]"
]

[project.urls]
Homepage = "https://github.com/fancyboi999/now-find-agent"
Repository = "https://github.com/fancyboi999/now-find-agent.git"

[project.scripts]
now-find-agent = "main:app"

# Black 代码格式化配置
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

# isort 导入排序配置
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app", "config", "bootstrap"]

# pytest 配置
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "--strict-markers",
    "--verbose",
    "--cov=app",
    "--cov-report=term-missing",
]
asyncio_mode = "auto"

# MyPy 类型检查配置
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "redis.*",
    "loguru.*",
    "colorama.*",
]
ignore_missing_imports = true
